@startuml

class Game {

}

class Map {
}

class Tile {

}

class Display {

}

class VectorImage{

}

class Window {

}

class Unit {
}

class Sprit{
}

class Image {
}

class Player{
}

class Color{
}

class Rect{
}

Map "1" *-- "0..N" Tile

Game "1" *-- "1" Map

Display "1" *.. "1" Map
Game "1" *-- "1" Display
Display "1" *.. "1" Window
Display "1" *.. "1" VectorImage
Game "1" *-- "1" VectorImage
Tile "1" *.. "1" Unit
Sprit "1" *-- "0...N" Image
VectorImage "1" *-- "0...N" Image
Game "1" *-- "0...N" Player

@enduml